AC_INIT(gnome15, 0.7.0)
AC_CONFIG_SRCDIR([src/main/python/gnome15/g15service.py])
AM_INIT_AUTOMAKE([tar-ustar])

dnl AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

dnl AC_PATH_PROG(GCONFTOOL, gconftool-2)
dnl AM_GCONF_SOURCE_2
dnl AC_PROG_INTLTOOL([0.21])

dnl check for python
AM_PATH_PYTHON

dnl AC_ARG_ENABLE([indicator],
dnl 			[  --enable-indicator	Enable Panel Indicator support],
dnl 			[case "${enableval}" in
dnl 				yes)	indicator=true ;;
dnl 				no)		indicator=false ;;
dnl 				*)		AC_MSG_ERROR([bad value ${enableval} for --enable-indicator]) ;;
dnl 			esac],[debug=false])
dnl AM_CONDITIONAL([INDICATOR],	[test x$indicator = xtrue])

dnl AC_ARG_ENABLE([applet],
dnl 			[  --enable-applet	Enable Panel Applet support],
dnl 			[case "${enableval}" in
dnl 				yes)	applet=true ;;
dnl 			m	no)		applet=false ;;
dnl 				*)		AC_MSG_ERROR([bad value ${enableval} for --enable-applet]) ;;
dnl 			esac],[debug=false])
dnl AM_CONDITIONAL([APPLET],	[test x$applet = xtrue])

dnl Dependencies for core applet and tools

dnl Determine if pyinputevent is available. If it is, kernel driver can be built
AX_PYTHON_MODULE(pyinputevent, [])
AS_IF([test "x${HAVE_PYMOD_PYINPUTEVENT}" = "xyes"],
     [pyinputevent=yes])
     
dnl Determine if pylibg19 is available. If it is, g19direct driver can be built
AX_PYTHON_MODULE(g19, [])
AS_IF([test "x${HAVE_PYMOD_G19}" = "xyes"],
     [pylibg19=yes])
     
dnl Allow udev files to be installed
AC_ARG_ENABLE([udev],
	[AS_HELP_STRING([--enable-udev=path-to-rules-directory],
		[Install udev rules to set permissions of various keyboard input and output devices])],
	[udev_rules_path=${enableval}],
	[udev_rules_path=no])	
AM_CONDITIONAL([ENABLE_UDEV], [test x$udev_rules_path != xno])
AC_SUBST(UDEV_RULES_PATH, $udev_rules_path)

AM_CONDITIONAL([ENABLE_DRIVER_KERNEL], [test x$pyinputevent = xyes])
AM_CONDITIONAL([ENABLE_DRIVER_G19DIRECT], [test x$pylibg19 = xyes])

dnl Required modules

AX_PYTHON_MODULE(Image, [])
AS_IF([test "x${HAVE_PYMOD_IMAGE}" = "xno"],
     [AC_MSG_ERROR([Requires Python Image Library])])
     
AX_PYTHON_MODULE(cairo, [])
AS_IF([test "x${HAVE_PYMOD_CAIRO}" = "xno"],
     [AC_MSG_ERROR([Requires Python bindings for the Cairo vector graphics library])])

AX_PYTHON_MODULE(dbus, [])
AS_IF([test "x${HAVE_PYMOD_DBUS}" = "xno"],
     [AC_MSG_ERROR([Requires DBUS bindings for Python])])

AX_PYTHON_MODULE(pyinotify, [])
AS_IF([test "x${HAVE_PYMOD_PYINOTIFY}" = "xno"],
     [AC_MSG_ERROR([Requires Pyinotify bindings for Python])])
     
AX_PYTHON_MODULE(lxml, [])
AS_IF([test "x${HAVE_PYMOD_LXML}" = "xno"],
     [AC_MSG_ERROR([Requires LXML bindings for Python])])
     
AX_PYTHON_MODULE(gobject, [])
AS_IF([test "x${HAVE_PYMOD_GOBJECT}" = "xno"],
     [AC_MSG_ERROR([Requires GObject for Python])])
     
AX_PYTHON_MODULE(xdg, [])
AS_IF([test "x${HAVE_PYMOD_XDG}" = "xno"],
     [AC_MSG_ERROR([Requires Python XDG])])
     
AX_PYTHON_MODULE(usb, [])
AS_IF([test "x${HAVE_PYMOD_USB}" = "xno"],
     [AC_MSG_ERROR([Requires PyUSB, python bindings for libusb])])
     
AX_PYTHON_MODULE(gconf, [])
AS_IF([test "x${HAVE_PYMOD_GCONF}" = "xno"],
     [AC_MSG_ERROR([Requires GConf bindings for Python])])
     
AX_PYTHON_MODULE(rsvg, [])
AS_IF([test "x${HAVE_PYMOD_RSVG}" = "xno"],
     [AC_MSG_ERROR([Requires RSVG for Python])])

AX_PYTHON_MODULE(pango, [])
AS_IF([test "x${HAVE_PYMOD_PANGO}" = "xno"],
     [AC_MSG_ERROR([Requires Pango for Python])])
     
AX_PYTHON_MODULE(Xlib, [])
AS_IF([test "x${HAVE_PYMOD_XLIB}" = "xno"],
     [AC_MSG_ERROR([Requires Python Xlib - Python Xlib bindings])])

AX_PYTHON_MODULE(setproctitle, [])
AS_IF([test "x${HAVE_PYMOD_SETPROCTITLE}" = "xno"],
     [AC_MSG_WARN([It is recommend that setproctitle is installed])])
     
dnl Dependencies for panel integration components
dnl
dnl Tries to work out the best one to use. If appindicator is available
dnl by default that will be used. Failing that, the systemtray will
dnl be used. Finally, if gnomeapplet is available, that will be used.
dnl The defauolt component(s) built can be changed using --enabled
dnl and --disable flags

AC_ARG_ENABLE([indicator],
	[AS_HELP_STRING([--enable-indicator],
		[Enable Indicator panel integration. Requires python-appindicator])],
	[case "${enableval}" in
 				yes)	indicator=yes ;;
 				no)		indicator=no ;;
 				*)		AC_MSG_ERROR([bad value ${enableval} for --enable-indicator]) ;;
 	esac],
	[indicator=yes])
AX_PYTHON_MODULE(appindicator, [])
AS_IF([test "x${HAVE_PYMOD_APPINDICATOR}" = "xyes"],
	  [indicator=$indicator],
	  [indicator=no])
AM_CONDITIONAL([ENABLE_INDICATOR], [test x$indicator = xyes])

AC_ARG_ENABLE([systemtray],
	[AS_HELP_STRING([--enable-systemtray],
		[Enable System Tray panel integration.])],
	[case "${enableval}" in
 				yes)	systemtray=yes ;;
 				no)		systemtray=no ;;
 				*)		AC_MSG_ERROR([bad value ${enableval} for --enable-systemtray]) ;;
 	esac],
	[case "${indicator}" in
 				yes)	systemtray=no ;;
 				no)		systemtray=yes ;;
 	esac])
AM_CONDITIONAL([ENABLE_SYSTEMTRAY], [test x$systemtray = xyes])

AC_ARG_ENABLE([applet],
	[AS_HELP_STRING([--enable-applet],
		[Enable GNOME panel applet integration.])],
	[case "${enableval}" in
 				yes)	applet=yes ;;
 				no)		applet=no ;;
 				*)		AC_MSG_ERROR([bad value ${enableval} for --enable-applet]) ;;
 	esac],
 	[case "${indicator}:${systemtray}" in
 				"no:no")	applet=yes ;;
 					  *)	applet=no ;;
 	esac])
AX_PYTHON_MODULE(gnomeapplet, [])
AS_IF([test "x${HAVE_PYMOD_GNOMEAPPLET}" = "xyes"],
	  [applet=$applet],
	  [applet=no])
AM_CONDITIONAL([ENABLE_APPLET], [test x$applet = xyes])

     
dnl Dependencies for plugins

AX_PYTHON_MODULE(alsaaudio, [])
AS_IF([test "x${HAVE_PYMOD_ALSAAUDIO}" = "xyes"],
	  [enable_volume_plugin=yes])
AM_CONDITIONAL([ENABLE_VOLUME_PLUGIN], [test x$enable_volume_plugin = xyes])

AX_PYTHON_MODULE(feedparser, [])
AS_IF([test "x${HAVE_PYMOD_FEEDPARSER}" = "xyes"],
	  [enable_rss_plugin=yes])
AM_CONDITIONAL([ENABLE_RSS_PLUGIN], [test x$enable_volume_plugin = xyes])

AX_PYTHON_MODULE(gtop, [])
AS_IF([test "x${HAVE_PYMOD_GTOP}" = "xyes"],
	  [enable_processes_plugin=yes])
AM_CONDITIONAL([ENABLE_PROCESSES_PLUGIN], [test x$enable_processes_plugin = xyes])
AS_IF([test "x${HAVE_PYMOD_GTOP}" = "xyes"],
      [enable_sysmon_plugin=yes])
AM_CONDITIONAL([ENABLE_SYSMON_PLUGIN], [test x$enable_sysmon_plugin = xyes])

AX_PYTHON_MODULE(opencv, [])
AS_IF([test "x${HAVE_PYMOD_OPENCV}" = "xyes"],
     [enable_webcam_plugin=yes])
AM_CONDITIONAL([ENABLE_WEBCAM_PLUGIN], [test x$enable_webcam_plugin = xyes])

PKG_CHECK_MODULES(PYGTK, pygtk-2.0)
AC_SUBST(PYGTK_CFLAGS)
AC_SUBST(PYGTK_LIBS)

dnl ALL_LINGUAS="es ja pl pt sr sr@Latn sv it"
                                                                                
dnl GETTEXT_PACKAGE=gnome-blog
dnl AC_SUBST(GETTEXT_PACKAGE)
dnl AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [The gettext package])

dnl AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
src/scripts/Makefile
src/plugins/Makefile
src/plugins/background/Makefile
src/plugins/cairo-clock/Makefile
src/plugins/clock/Makefile
src/plugins/clock/default/Makefile
src/plugins/fx/Makefile
src/plugins/g15daemon-server/Makefile
src/plugins/macro-recorder/Makefile
src/plugins/macro-recorder/default/Makefile
src/plugins/macros/Makefile
src/plugins/macros/default/Makefile
src/plugins/mpris/Makefile
src/plugins/mpris/default/Makefile
src/plugins/mounts/Makefile
src/plugins/mounts/default/Makefile
src/plugins/menu/Makefile
src/plugins/panel/Makefile
src/plugins/processes/Makefile
src/plugins/processes/default/Makefile
src/plugins/im/Makefile
src/plugins/im/default/Makefile
src/plugins/notify-lcd/Makefile
src/plugins/notify-lcd/default/Makefile
src/plugins/screensaver/Makefile
src/plugins/screensaver/default/Makefile
src/plugins/stopwatch/Makefile
src/plugins/stopwatch/default/Makefile
src/plugins/sysmon/Makefile
src/plugins/sysmon/default/Makefile
src/plugins/rss/Makefile
src/plugins/rss/default/Makefile
src/plugins/sysmon/dials/Makefile
src/plugins/volume/Makefile
src/plugins/volume/default/Makefile
src/plugins/videoplayer/Makefile
src/plugins/videoplayer/default/Makefile
src/plugins/weather/Makefile
src/plugins/weather/default/Makefile
src/plugins/webcam/Makefile
src/plugins/webcam/default/Makefile
src/themes/Makefile
src/themes/default/Makefile
src/udev/Makefile
src/gnome/Makefile
src/gnome/applet/Makefile
src/gnome/applet/GNOME_G15Applet.server
src/gnome/applications/Makefile
src/gnome/applications/g15-config.desktop
src/gnome/autostart/Makefile
src/gnome/autostart/gnome15.desktop
src/gnome/autostart/g15-indicator.desktop
src/gnome/autostart/g15-systemtray.desktop
src/gnome/dbus/Makefile
src/main/Makefile
src/main/python/Makefile
src/main/python/gnome15/Makefile
src/main/python/gnome15/g15globals.py
src/main/python/gnome15/drivers/Makefile
src/main/resources/Makefile
src/main/resources/icons/Makefile
src/main/resources/icons/hicolor/Makefile
src/main/resources/icons/hicolor/16x16/Makefile
src/main/resources/icons/hicolor/16x16/status/Makefile
src/main/resources/icons/hicolor/22x22/Makefile
src/main/resources/icons/hicolor/22x22/apps/Makefile
src/main/resources/icons/hicolor/22x22/status/Makefile
src/main/resources/icons/hicolor/24x24/Makefile
src/main/resources/icons/hicolor/24x24/apps/Makefile
src/main/resources/icons/hicolor/24x24/status/Makefile
src/main/resources/icons/hicolor/48x48/Makefile
src/main/resources/icons/hicolor/48x48/apps/Makefile
src/main/resources/icons/hicolor/64x64/Makefile
src/main/resources/icons/hicolor/64x64/apps/Makefile
src/main/resources/icons/hicolor/scalable/Makefile
src/main/resources/icons/hicolor/scalable/apps/Makefile
src/main/resources/icons/hicolor/scalable/status/Makefile
src/main/resources/icons/hicolor/scalable/devices/Makefile
src/main/resources/images/Makefile
src/main/resources/glade/Makefile
src/man/Makefile
])

AS_ECHO("Available features :-")
AS_ECHO("")
AS_ECHO("Panel Integration")
AS_ECHO("-----------------")
AS_ECHO_N("indicator                   - ")
AS_IF([test "x$indicator" = "xyes" ],
     [AS_ECHO("Enabled")],
     [AS_ECHO("Disabled (missing python-appindicator library)")])
AS_ECHO_N("systemtray                  - ")
AS_IF([test "x$systemtray" = "xyes" ],
     [AS_ECHO("Enabled")],
     [AS_ECHO("Disabled")])
AS_ECHO_N("GNOME panel applet          - ")
AS_IF([test "x$applet" = "xyes" ],
     [AS_ECHO("Enabled")],
     [AS_ECHO("Disabled")])
AS_ECHO("")
AS_ECHO("Drivers")
AS_ECHO("-------")
AS_ECHO("driver_g15 (g15daemon)      - Enabled")
AS_ECHO("driver_g19 (g19d)           - Enabled")
AS_ECHO_N("driver_g19direct            - ")
AS_IF([test "x$pylibg19" = "xyes" ],
     [AS_ECHO("Enabled")],
     [AS_ECHO("Disabled (missing PyLibG19 library)")])
AS_ECHO_N("driver_kernel               - ")
AS_IF([test "x$pyinputevent" = "xyes" ],
     [AS_ECHO("Enabled")],
     [AS_ECHO("Disabled (missing pyinputevent library)")])
AS_ECHO("")
AS_ECHO("Optional plugins")
AS_ECHO("----------------")
AS_ECHO_N("volume                      - ")
AS_IF([test "x$enable_volume_plugin" = "xyes" ],
     [AS_ECHO("Enabled")],
     [AS_ECHO("Disabled (missing Python Alsa Audio library)")])
AS_ECHO_N("rss                         - ")
AS_IF([test "x$enable_rss_plugin" = "xyes" ],
     [AS_ECHO("Enabled")],
     [AS_ECHO("Disabled (missing Python Feed Parser library)")])
AS_ECHO_N("processes                   - ")
AS_IF([test "x$enable_processes_plugin" = "xyes" ],
     [AS_ECHO("Enabled")],
     [AS_ECHO("Disabled (missing Python Gtop library)")])
AS_ECHO_N("sysmon                      - ")
AS_IF([test "x$enable_sysmon_plugin" = "xyes" ],
     [AS_ECHO("Enabled")],
     [AS_ECHO("Disabled (missing Python Gtop library)")])
AS_ECHO_N("webcam                      - ")
AS_IF([test "x$enable_webcam_plugin" = "xyes" ],
     [AS_ECHO("Enabled")],
     [AS_ECHO("Disabled (missing Python OpenCV library)")])
