gladedir = $(datadir)/gnome15/glade
glade_DATA = driver_gtk.glade \
	driver_kernel.glade \
	driver_g19direct.glade \
	driver_g15direct.glade \
	driver_g930.glade \
	g15-config.glade \
	password.glade \
	macro-editor.glade \
	script-editor.glade \
	colorpicker.glade \
	accounts.glade \
	redblue.png

EXTRA_DIST =  			\
	$(glade_DATA)
