gladedir = $(datadir)/gnome15/glade
glade_DATA = driver_gtk.ui \
	driver_kernel.ui \
	driver_g19direct.ui \
	driver_g15direct.ui \
	driver_g930.ui \
	g15-config.ui \
	password.ui \
	macro-editor.ui \
	script-editor.ui \
	colorpicker.ui \
	accounts.ui \
	redblue.png

EXTRA_DIST =  			\
	$(glade_DATA)
