if ENABLE_VOLUME_PLUGIN
    MAYBE_VOLUME = volume
endif
if ENABLE_RSS_PLUGIN
    MAYBE_RSS = rss
endif
if ENABLE_SYSMON_PLUGIN
    MAYBE_SYSMON = sysmon
endif
if ENABLE_PROCESSES_PLUGIN
    MAYBE_PROCESSES = processes
endif
if ENABLE_CAL_PLUGIN
    MAYBE_CAL = cal
endif
if ENABLE_CAL_EVOLUTION_PLUGIN
    MAYBE_CAL_EVOLUTION = cal-evolution
endif
if ENABLE_CAL_GOOGLE_PLUGIN
    MAYBE_CAL_GOOGLE = cal-google
endif
if ENABLE_LCDBIFF_PLUGIN
    MAYBE_LCDBIFF = lcdbiff
endif
if ENABLE_BACKGROUND_PLUGIN
    MAYBE_BACKGROUND = background
endif
if ENABLE_CAIRO_CLOCK_PLUGIN
    MAYBE_CAIRO_CLOCK = cairo-clock
endif
if ENABLE_CLOCK_PLUGIN
    MAYBE_CLOCK = clock
endif

if ENABLE_FX_PLUGIN
    MAYBE_FX = fx
endif
if ENABLE_MACRO_RECORDER_PLUGIN
    MAYBE_MACRO_RECORDER = macro-recorder
endif
if ENABLE_MACROS_PLUGIN
    MAYBE_MACROS = macros
endif
if ENABLE_PROFILES_PLUGIN
    MAYBE_PROFILES = profiles
endif
if ENABLE_MOUNTS_PLUGIN
    MAYBE_MOUNTS = mounts
endif
if ENABLE_NOTIFY_LCD_PLUGIN
    MAYBE_NOTIFY_LCD = notify-lcd
endif
if ENABLE_IM_PLUGIN
    MAYBE_IM = im
endif
if ENABLE_WEATHER_PLUGIN
    MAYBE_WEATHER = weather
endif
if ENABLE_MPRIS_PLUGIN
    MAYBE_MPRIS = mpris
endif
if ENABLE_MENU_PLUGIN
    MAYBE_MENU = menu
endif
if ENABLE_PANEL_PLUGIN
    MAYBE_PANEL = panel
endif
if ENABLE_MEDIAPLAYER_PLUGIN
    MAYBE_MEDIAPLAYER = mediaplayer
endif
if ENABLE_G15DAEMON_SERVER_PLUGIN
    MAYBE_G15DAEMON_SERVER = g15daemon-server
endif
if ENABLE_STOPWATCH_PLUGIN
    MAYBE_STOPWATCH = stopwatch
endif
if ENABLE_SCREENSAVER_PLUGIN
    MAYBE_SCREENSAVER = screensaver
endif
if ENABLE_INDICATOR_ME_PLUGIN
    MAYBE_INDICATOR_ME = indicator-me
endif
if ENABLE_INDICATOR_MESSAGES_PLUGIN
    MAYBE_INDICATOR_MESSAGES = indicator-messages
endif
if ENABLE_SENSE_PLUGIN
    MAYBE_SENSE = sense
endif
if ENABLE_LCDSHOT_PLUGIN
    MAYBE_LCDSHOT = lcdshot
endif
if ENABLE_TWEAK_PLUGIN
    MAYBE_TWEAK = tweak
endif
if ENABLE_TAILS_PLUGIN
    MAYBE_TAILS = tails
endif
if ENABLE_DISPLAY_PLUGIN
    MAYBE_DISPLAY = display
endif
if ENABLE_VOIP_PLUGIN
    MAYBE_VOIP = voip
endif
if ENABLE_VOIP_TEAMSPEAK3_PLUGIN
    MAYBE_VOIP_TEAMSPEAK3 = voip-teamspeak3
endif
if ENABLE_GOOGLE_ANALYTICS_PLUGIN
    MAYBE_GOOGLE_ANALYTICS = google-analytics
endif

SUBDIRS = $(MAYBE_BACKGROUND) $(MAYBE_CAIRO_CLOCK) $(MAYBE_CLOCK) $(MAYBE_FX) $(MAYBE_MACRO_RECORDER) $(MAYBE_MACROS) $(MAYBE_MOUNTS) \
	$(MAYBE_NOTIFY_LCD) $(MAYBE_IM) $(MAYBE_WEATHER) $(MAYBE_MPRIS) $(MAYBE_MENU) $(MAYBE_PANEL) $(MAYBE_MEDIAPLAYER) $(MAYBE_G15DAEMON_SERVER) \
	$(MAYBE_STOPWATCH) $(MAYBE_SCREENSAVER) $(MAYBE_INDICATOR_ME) $(MAYBE_INDICATOR_MESSAGES) $(MAYBE_PROFILES) \
	$(MAYBE_SYSMON) $(MAYBE_VOLUME) $(MAYBE_RSS) $(MAYBE_PROCESSES) $(MAYBE_CAL) $(MAYBE_CAL_EVOLUTION) $(MAYBE_CAL_GOOGLE) $(MAYBE_LCDBIFF) $(MAYBE_SENSE) \
	$(MAYBE_LCDSHOT) $(MAYBE_TWEAK) $(MAYBE_TAILS) $(MAYBE_DISPLAY) $(MAYBE_VOIP) $(MAYBE_VOIP_TEAMSPEAK3) \
	$(MAYBE_GOOGLE_ANALYTICS)
	
DIST_SUBDIRS = background cairo-clock clock fx macro-recorder macros mounts notify-lcd im weather mpris menu panel mediaplayer g15daemon-server stopwatch \
	profiles sysmon volume rss processes screensaver cal cal-evolution cal-google lcdbiff indicator-me indicator-messages sense lcdshot tweak tails display \
	voip voip-teamspeak3 google-analytics
